--- a/index.css
+++ b/index.css
@@ -66,7 +66,6 @@
 
 .restaurant-card {
       width: calc(50% - 10px);
-      /* Set width for 2 items in a row with margin */
       margin-bottom: 20px;
       margin-left: 20px;
 }
@@ -74,21 +73,18 @@
 @media (min-width: 768px) {
       .restaurant-card {
             width: calc(33.333% - 10px);
-            /* Set width for 3 items in a row with margin */
       }
 }
 
 @media (min-width: 992px) {
       .restaurant-card {
             width: calc(25% - 10px);
-            /* Set width for 4 items in a row with margin */
       }
 }
 
 @media (min-width: 1200px) {
       .restaurant-card {
             width: calc(16.666% - 10px);
-            /* Set width for 6 items in a row with margin */
       }
 }
 
@@ -101,7 +97,7 @@
       overflow: hidden;
       position: relative;
       transition: transform 0.3s, box-shadow 0.3s;
-      background-color: #f6f5f5f8;
+      background-color: #e6e5e5f8;
       margin-bottom: 10px;
 }
 
@@ -134,16 +130,20 @@
 }
 
 /* Search Bar */
+.search-div {
+      display: flex;
+}
+
 .search {
       display: flex;
       align-items: center;
-      width: 99%;
+      width: 60%;
       /* Adjust the width as needed */
       background-color: #fff;
       /* Background color */
       border: 1px solid #ccc;
       /* Border color */
-      border-radius: 5px;
+      border-radius: 50px;
       /* Rounded corners */
       padding: 5px;
       /* Padding */
@@ -218,4 +218,67 @@
 
 .footer a:hover {
       text-decoration: underline;
+}
+
+
+
+/* Filter button */
+.filter-btn {
+      display: inline-block;
+      position: relative;
+      margin-left: 15px;
+}
+
+.filter-button {
+      padding: 10px 20px;
+      border: 1px solid #4CAF50;
+      background-color: transparent;
+      color: #4CAF50;
+      font-size: 14px;
+      font-weight: unset;
+      border-radius: 25px;
+      cursor: pointer;
+      outline: none;
+      margin-top: 8px;
+}
+
+.filter-button::before,
+.filter-button::after {
+      content: '';
+      position: absolute;
+      width: 0;
+      height: 2px;
+      background-color: #4CAF50;
+      /* Green color */
+      transition: all 0.3s ease;
+}
+
+.filter-button:hover {
+      color: white;
+      background-color: #4CAF50;
+}
+
+
+/* CSS for shimmer cards */
+.shimmer-container {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+      max-width: 3000px;
+      margin-right: 80px;
+      margin-left: 80px;
+}
+
+.shimmer-cards {
+      width: 200px;
+}
+
+.login-logout-btn {
+      text-decoration: none;
+      padding: 10px;
+      border: none;
+      background-color: transparent;
+      transition: background-color 0.3s ease;
+      font-size: large;
+      color: whitesmoke;
 }
